<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>osqp_eigen_catkin</name>
  <version>0.0.0</version>
  <description>Catkin wrapper around osqp_eigen.</description>
  <maintainer email="lgulich@ethz.ch">Lionel Gulich</maintainer>
  <license>Closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>osqp_catkin</depend>
</package>
